kubernetes/cluster/active/resources/istio-resources/base/resources/istio-networking/tls-gateway.yaml
---
{
  apiVersion: "networking.istio.io/v1",
  kind: "Gateway",
  metadata: {
    name: "tls-gateway",
  },
  spec: {
    selector: {
      istio: "ingressgateway",
    },
    servers: [{
      hosts: [
        "*",
      ],
      port: {
        number: 443,
        name: "https",
        protocol: "HTTPS",
      },
      tls: {
        mode: "SIMPLE",
        credentialName: "tls-wildcard",
      },
    }],
  },
}
