kubernetes/cluster/active/resources/istio-resources/base/resources/istio-networking/destination-rule.yaml
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: https-services-tls
spec:
  host: "*.svc.cluster.local"
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 443
        tls:
          mode: SIMPLE
          insecureSkipVerify: true
      - port:
          number: 8443
        tls:
          mode: SIMPLE
          insecureSkipVerify: true
